--- a/first-project/.gitignore
+++ b/first-project/.gitignore
@@ -39,9 +39,9 @@ vite.config.ts.timestamp
 .env
 .env.*.local
 .env.local
-.env.development.local
+.env.development
 .env.test.local
-.env.production.local
+.env.production
 
 # Editor directories and files
 .vscode/*
