--- a/first-project/.env.development
+++ b/first-project/.env.development
@@ -1,3 +1,3 @@
 VITE_GOOGLE_CLIENT_ID=100142242159-cf03ldh87cis3m9h9ro9a22qu5tbsftq.apps.googleusercontent.com
-VITE_SERVER_ENDPOINT=https://affiglow-server.onrender.com
+VITE_SERVER_ENDPOINT=http://localhost:5000
 VITE_RAZORPAY_KEY_ID=rzp_test_wUKQzcZFSkwLEV
